# triton-rust

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs
example/: triton-test-cuda-shm.rs  triton-test-decoder.rs  triton-test-huggingface.rs  triton-test.rs
examples/: README.md
examples/example-huggingface/: README.md  triton-example-huggingface.rs  triton-test-huggingface.rs
examples/example-huggingface/config/: config.pbtxt
examples/example-imagenet/: README.md  generate_onnx_resnet.py  triton-example-imagenet.rs
examples/example-imagenet/config/: config.pbtxt
proto/: model_config.proto  triton_grpc.proto
src/: cuda_shared_memory.rs  shared_memory.rs  system_shared_memory.rs  triton_rust.rs
src/shared_memory/: Makefile  wrapper.h
src/shared_memory/cuda_shared_memory/: cencode.cc  cencode.h  cuda_shared_memory.cc
src/shared_memory/system_shared_memory/: shared_memory_handle.h
