[package]
name = "triton-rust"
version = "0.1.0"
authors = ["Boris Albar <b.albar@catie.fr"]
edition = "2021"

[dependencies]
ndarray = { version = "0.15.6", features = ["blas", "rayon"] }
tonic = { version = "0.6.1", features = ["tls"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.9.0"
crossbeam-channel = "0.5.4"
ndarray-npy = "0.8.1"

[build-dependencies]
tonic-build = "0.6.0"
bindgen = "0.53.1"

[dev-dependencies]
tokenizers = "0.13.1"

[lib]
name = "triton_rust"
path = "src/triton_rust.rs"

[[example]]
name = "triton-example-huggingface"
path = "examples/example-huggingface/triton-example-huggingface.rs"