[package]
name = "triton-rust"
version = "0.1.0"
authors = ["Boris Albar <b.albar@catie.fr"]
edition = "2021"

[dependencies]
ndarray = { version = "0.15.6", features = ["blas", "rayon"] }
tonic = { version = "0.9.2", features = ["tls"]}
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
prost = "0.11.9"
crossbeam-channel = "0.5.8"
ndarray-npy = "0.8.1"

[build-dependencies]
tonic-build = "0.9.2"
bindgen = "0.65.1"

[dev-dependencies]
tokenizers = "0.13.3"
image = "0.24.6"
nshare = {version = "0.9.0", features=["ndarray", "image"]}

[lib]
name = "triton_rust"
path = "src/triton_rust.rs"

[[example]]
name = "triton-example-huggingface"
path = "examples/example-huggingface/triton-example-huggingface.rs"

[[example]]
name = "triton-example-imagenet"
path = "examples/example-imagenet/triton-example-imagenet.rs"
